--- a/part1-exploration.ipynb
+++ b/part1-exploration.ipynb
@@ -116,6 +116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Will need to perform feature selection\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example from https://machinelearningmastery.com/how-to-configure-k-fold-cross-validation/\n",
     "\n",
     "# sensitivity analysis of k in k-fold cross-validation\n",
