Try some manual feature selection

--- a/part1-exploration.ipynb
+++ b/part1-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,25 +14,41 @@
     "from matplotlib import pyplot\n",
     "\n",
     "# Load the dataset\n",
+    "# def get_dataset():\n",
+    "#     data = pd.read_csv('data/cleveland.csv')\n",
+    "#     X = data.drop('num', axis=1)\n",
+    "#     y = data['num'].apply(lambda x: 1 if x > 0 else 0)  # Binary classification: 0 = no disease, 1 = disease\n",
+    "    \n",
+    "#     # Handle missing values\n",
+    "#     X = X.replace('?', np.nan).astype(float)\n",
+    "#     X = X.fillna(X.mean())\n",
+    "    \n",
+    "#     # Normalize the features\n",
+    "#     scaler = StandardScaler()\n",
+    "#     X = scaler.fit_transform(X)\n",
+    "    \n",
+    "#     return X, y.values\n",
     "def get_dataset():\n",
     "    data = pd.read_csv('data/cleveland.csv')\n",
     "    X = data.drop('num', axis=1)\n",
-    "    y = data['num'].apply(lambda x: 1 if x > 0 else 0)  # Binary classification: 0 = no disease, 1 = disease\n",
+    "    y = data['num'].apply(lambda x: 1 if x > 0 else 0)\n",
     "    \n",
-    "    # Handle missing values\n",
     "    X = X.replace('?', np.nan).astype(float)\n",
     "    X = X.fillna(X.mean())\n",
     "    \n",
-    "    # Normalize the features\n",
     "    scaler = StandardScaler()\n",
-    "    X = scaler.fit_transform(X)\n",
+    "    X_scaled = scaler.fit_transform(X)\n",
+    "    X = pd.DataFrame(X_scaled, columns=X.columns)\n",
     "    \n",
-    "    return X, y.values"
+    "    return X, y.values\n",
+    "\n",
+    "def feature_selection(X, selected_features):\n",
+    "    return X[selected_features]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -77,30 +93,41 @@
     "def get_model():\n",
     "    return LogisticRegression(max_iter=1000)\n",
     "\n",
-    "def evaluate_model(cv):\n",
-    "    X, y = get_dataset()\n",
+    "# def evaluate_model(cv):\n",
+    "#     X, y = get_dataset()\n",
+    "#     model = get_model()\n",
+    "#     scores = cross_val_score(model, X, y, scoring='accuracy', cv=cv, n_jobs=-1)\n",
+    "#     return np.mean(scores), scores.min(), scores.max()\n",
+    "\n",
+    "def evaluate_model(X, y, cv):\n",
     "    model = get_model()\n",
     "    scores = cross_val_score(model, X, y, scoring='accuracy', cv=cv, n_jobs=-1)\n",
     "    return np.mean(scores), scores.min(), scores.max()\n",
     "\n",
+    "X, y = get_dataset()\n",
+    "\n",
+    "ideal_features = ['cp', 'slope', 'chol', 'age', 'restecg', 'sex', 'fbs', 'exang']\n",
+    "X_selected = feature_selection(X, ideal_features)\n",
+    "\n",
     "# Evaluate using leave-one-out cross-validation\n",
-    "ideal, _, _ = evaluate_model(LeaveOneOut())\n",
+    "# ideal, _, _ = evaluate_model(X_selected, y, LeaveOneOut())\n",
+    "ideal, _, _ = evaluate_model(X, y, LeaveOneOut())\n",
     "print('Ideal: %.3f' % ideal)\n",
     "\n",
     "# Define folds to test, test from 2 to 20 folds\n",
     "folds = range(2, 21)\n",
     "\n",
-    "# Record mean and min/max of each set of results\n",
-    "means, mins, maxs = list(), list(), list()\n",
+    "# Perform k-fold cross-validation analysis\n",
+    "means, mins, maxs = [], [], []\n",
     "\n",
-    "# Evaluate each k value\n",
     "for k in folds:\n",
     "    cv = KFold(n_splits=k, shuffle=True, random_state=1)\n",
-    "    k_mean, k_min, k_max = evaluate_model(cv)\n",
-    "    print('> folds=%d, accuracy=%.3f (%.3f,%.3f)' % (k, k_mean, k_min, k_max))\n",
+    "    k_mean, k_min, k_max = evaluate_model(X, y, cv)\n",
+    "    print(f'> folds={k}, accuracy={k_mean:.3f} ({k_min:.3f},{k_max:.3f})')\n",
     "    means.append(k_mean)\n",
     "    mins.append(k_mean - k_min)\n",
     "    maxs.append(k_max - k_mean)\n",
+    "\n",
     "\n",
     "# Line plot of k mean values with min/max error bars\n",
     "pyplot.errorbar(folds, means, yerr=[mins, maxs], fmt='o')\n",
