Trying to fix some python conda issues

--- a/part1-exploration.ipynb
+++ b/part1-exploration.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mImportError: /home/matt/projects/project4-knn-cs5830/.conda/lib/python3.11/lib-dynload/_sqlite3.cpython-311-x86_64-linux-gnu.so: undefined symbol: sqlite3_deserialize. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -143,7 +154,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Will need to perform feature selection\n"
+    "# TODO: Will need to perform feature selection\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif, RFE, mutual_info_classif\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "def perform_feature_selection(X, y, method='univariate', k=5):\n",
+    "    if method == 'univariate':\n",
+    "        selector = SelectKBest(f_classif, k=k)\n",
+    "        selector.fit(X, y)\n",
+    "        selected_features = X.columns[selector.get_support()].tolist()\n",
+    "    elif method == 'rfe':\n",
+    "        rfe = RFE(estimator=LogisticRegression(max_iter=1000), n_features_to_select=k)\n",
+    "        rfe.fit(X, y)\n",
+    "        selected_features = X.columns[rfe.support_].tolist()\n",
+    "    elif method == 'random_forest':\n",
+    "        rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "        rf.fit(X, y)\n",
+    "        importances = rf.feature_importances_\n",
+    "        indices = np.argsort(importances)[::-1]\n",
+    "        selected_features = X.columns[indices[:k]].tolist()\n",
+    "    elif method == 'mutual_info':\n",
+    "        selector = SelectKBest(mutual_info_classif, k=k)\n",
+    "        selector.fit(X, y)\n",
+    "        selected_features = X.columns[selector.get_support()].tolist()\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid method. Choose 'univariate', 'rfe', 'random_forest', or 'mutual_info'.\")\n",
+    "    \n",
+    "    return selected_features\n",
+    "\n",
+    "def compare_feature_selection_methods(X, y, methods, k_range):\n",
+    "    results = {}\n",
+    "    for method in methods:\n",
+    "        method_results = []\n",
+    "        for k in k_range:\n",
+    "            selected_features = perform_feature_selection(X, y, method=method, k=k)\n",
+    "            X_selected = X[selected_features]\n",
+    "            cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "            mean_score, _, _ = evaluate_model(X_selected, y, cv)\n",
+    "            method_results.append(mean_score)\n",
+    "        results[method] = method_results\n",
+    "    return results\n",
+    "\n",
+    "# Main analysis\n",
+    "X, y = get_dataset()\n",
+    "\n",
+    "# Compare different feature selection methods\n",
+    "methods = ['univariate', 'rfe', 'random_forest', 'mutual_info']\n",
+    "k_range = range(1, len(X.columns) + 1)\n",
+    "results = compare_feature_selection_methods(X, y, methods, k_range)\n",
+    "\n",
+    "# Plot results\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "for method in methods:\n",
+    "    plt.plot(k_range, results[method], label=method)\n",
+    "plt.xlabel('Number of Features')\n",
+    "plt.ylabel('Mean Accuracy')\n",
+    "plt.title('Comparison of Feature Selection Methods')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Select the best method and number of features\n",
+    "best_method = max(results, key=lambda x: max(results[x]))\n",
+    "best_k = k_range[np.argmax(results[best_method])]\n",
+    "print(f\"Best method: {best_method}\")\n",
+    "print(f\"Best number of features: {best_k}\")\n",
+    "\n",
+    "# Get the best features\n",
+    "best_features = perform_feature_selection(X, y, method=best_method, k=best_k)\n",
+    "print(f\"Best features: {', '.join(best_features)}\")\n",
+    "\n",
+    "# Compare performance: all features vs. selected features\n",
+    "X_selected = X[best_features]\n",
+    "folds = range(2, 21)\n",
+    "means_all, mins_all, maxs_all = [], [], []\n",
+    "means_selected, mins_selected, maxs_selected = [], [], []\n",
+    "\n",
+    "for k in folds:\n",
+    "    cv = KFold(n_splits=k, shuffle=True, random_state=1)\n",
+    "    \n",
+    "    # All features\n",
+    "    k_mean, k_min, k_max = evaluate_model(X, y, cv)\n",
+    "    means_all.append(k_mean)\n",
+    "    mins_all.append(k_mean - k_min)\n",
+    "    maxs_all.append(k_max - k_mean)\n",
+    "    \n",
+    "    # Selected features\n",
+    "    k_mean, k_min, k_max = evaluate_model(X_selected, y, cv)\n",
+    "    means_selected.append(k_mean)\n",
+    "    mins_selected.append(k_mean - k_min)\n",
+    "    maxs_selected.append(k_max - k_mean)\n",
+    "\n",
+    "# Plot comparison\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.errorbar(folds, means_all, yerr=[mins_all, maxs_all], fmt='o-', label='All Features')\n",
+    "plt.errorbar(folds, means_selected, yerr=[mins_selected, maxs_selected], fmt='s-', label='Selected Features')\n",
+    "plt.xlabel('Number of Folds')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.title('Comparison of All Features vs Selected Features')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Print final results\n",
+    "print(\"\\nFinal Results:\")\n",
+    "print(f\"All Features - Mean Accuracy: {np.mean(means_all):.3f}\")\n",
+    "print(f\"Selected Features - Mean Accuracy: {np.mean(means_selected):.3f}\")"
    ]
   },
   {
@@ -229,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
