Reinstalling packages each time seems to fix it?

--- a/part1-exploration.ipynb
+++ b/part1-exploration.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %conda install pandas numpy scikit-learn matplotlib\n",
+    "%conda install pandas numpy scikit-learn matplotlib\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
