Univariate reduces features and improves performance after tuning

--- a/part1-exploration.ipynb
+++ b/part1-exploration.ipynb
@@ -2152,6 +2152,13 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interesting. After tuning the logistic model with a grid search the better feature selection model is Univariate (was random_forest), while also reducing the selected features from 11 to 6. "
+   ]
   }
  ],
  "metadata": {
