Add some notes on methodology

--- a/part1-exploration.ipynb
+++ b/part1-exploration.ipynb
@@ -828,7 +828,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interesting. After tuning the logistic model with a grid search the better feature selection model is Univariate (was random_forest), while also reducing the selected features from 11 to 6. "
+    "Interesting. After tuning the logistic model with a grid search the better feature selection model is Univariate (was random_forest), while also reducing the selected features from 11 to 6.\n",
+    "\n",
+    "- Univariate Selection (f_classif):\n",
+    "    - Selects the best features based on univariate statistical tests. For classification tasks, it uses the ANOVA F-value between each feature and the target. Fast and scalable but doesn't account for feature interactions.\n",
+    "- Mutual Information (mutual_info_classif):\n",
+    "    - This method measures the mutual dependence between two variables. It can capture non-linear relationships between features and the target, which linear correlation measures might miss.\n",
+    "- Recursive Feature Elimination (RFE):\n",
+    "    - RFE works by recursively removing attributes and building a model on those attributes that remain. It uses the model accuracy to identify which attributes (and combination of attributes) contribute the most to predicting the target attribute.\n",
+    "- Random Forest Feature Importance:\n",
+    "    - Uses the Random Forest algorithm to compute feature importance. Optimizes based on how much each feature decreases the weighted impurity in a tree.\n",
+    "\n",
+    "Multiple methods for feature selection:\n",
+    "\n",
+    "- Different perspectives: Each method looks at the data from a different angle. For example, univariate methods consider each feature independently, while RFE considers feature interactions.\n",
+    "- Robustness: By using multiple methods, we can be more confident in our feature selection. If a feature is selected by multiple methods, it's likely to be truly important.\n",
+    "- Handling different relationships: Some methods (like mutual information) can capture non-linear relationships, while others (like univariate selection) are better for linear relationships.\n",
+    "- Complementary information: Each method might identify different important features, giving us a more comprehensive view of what's important in our dataset.\n",
+    "- Model-specific vs. Model-agnostic: Some methods (like RFE) are model-specific, while others (like univariate selection) are model-agnostic. Using both types can provide more robust results.\n",
+    "\n",
+    "For each method, after a grid search for optimal parameters on the whole dataset:\n",
+    "\n",
+    "- Apply each method for different numbers of features (k)\n",
+    "- For each method and k, we perform cross-validation using logistic regression\n",
+    "- Calculate the mean F1 score for each method and k\n",
+    "- Plot the results to visually compare the methods"
    ]
   }
  ],
