A few more notes

--- a/part1-exploration.ipynb
+++ b/part1-exploration.ipynb
@@ -828,7 +828,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interesting. After tuning the logistic model with a grid search the better feature selection model is Univariate (was random_forest), while also reducing the selected features from 11 to 6.\n",
+    "Interesting. After tuning the logistic model with a grid search the better feature selection model is Univariate (was random_forest), while also reducing the selected features from 11 to 6. We select k=6 based on the recommendation from our example source:\n",
+    "\n",
+    "```\n",
+    "A line plot is created comparing the mean accuracy scores to the LOOCV result with the min and max of each result distribution indicated using error bars.\n",
+    "\n",
+    "The results suggest that for this model on this dataset, most k values underestimate the performance of the model compared to the ideal case. The results suggest that perhaps k=10 alone is slightly optimistic and perhaps k=13 might be a more accurate estimate.\n",
+    "```\n",
+    "\n",
+    "We utilize the same method of plotting our 10-fold CV results for each tested k value, and find that a k of 6 represents a near ideal score. \n",
+    "\n",
+    "#### More information on feature selection method:\n",
     "\n",
     "- Univariate Selection (f_classif):\n",
     "    - Selects the best features based on univariate statistical tests. For classification tasks, it uses the ANOVA F-value between each feature and the target. Fast and scalable but doesn't account for feature interactions.\n",
