Move stuff around, combine prj4 parts 1 and 2 into proj 4 files. Save figs into plots

--- a/exploration/part2-exploration.ipynb
+++ b/exploration/part2-exploration.ipynb
@@ -331,7 +331,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Poor performance is probably reflective of a less than linear relationship between features, a more complex than logistic regression might perform better. The higher performance of mutual_info suggests that there are non-linear relationships in the data that this method was able to capture better than the others. We are also only training and testing on 1/20 of the full dataset, because of limitations in processing power. "
+    "Poor performance is probably reflective of a less than linear relationship between features, a more complex than logistic regression might perform better. The higher performance of mutual_info suggests that there are non-linear relationships in the data that this method was able to capture better than the others. We are also only training and testing on 1/20 of the full dataset, because of limitations in processing power. \n",
+    "\n",
+    "For both parts 1 and 2 hyperparameter tuning may improve performance (grid search?)"
    ]
   }
  ],
