--- a/exploration/part1-exploration.ipynb
+++ b/exploration/part1-exploration.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example from https://machinelearningmastery.com/how-to-configure-k-fold-cross-validation/\n",
+    "# Example from: https://machinelearningmastery.com/how-to-configure-k-fold-cross-validation/\n",
     "\n",
     "# sensitivity analysis of k in k-fold cross-validation\n",
     "from numpy import mean\n",
@@ -238,6 +238,7 @@
    "outputs": [],
    "source": [
     "def get_model():\n",
+    "    # https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
     "    return LogisticRegression(max_iter=1000)\n",
     "\n",
     "def perform_grid_search(X, y):\n",
@@ -882,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
