Add a credit to mlm

--- a/project4.ipynb
+++ b/project4.ipynb
@@ -30,7 +30,9 @@
     "warnings.filterwarnings(\"ignore\", category=UndefinedMetricWarning)\n",
     "\n",
     "# Random seed\n",
-    "RANDOM_SEED = 1492"
+    "RANDOM_SEED = 1492\n",
+    "\n",
+    "# Implementation based on: https://machinelearningmastery.com/how-to-configure-k-fold-cross-validation/"
    ]
   },
   {
