Match target column for test set

--- a/project4.ipynb
+++ b/project4.ipynb
@@ -328,7 +328,7 @@
     "    set_seed()\n",
     "    train_file = 'data/cleveland.csv'\n",
     "    test_file = 'data/cleveland-test-sample.csv'\n",
-    "    target_column = 'num'\n",
+    "    target_column = 'disease'\n",
     "    \n",
     "    trained_model, selected_features = train_and_evaluate_model(train_file, test_file, target_column)"
    ]
