--- a/project4-fix.ipynb
+++ b/project4-fix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score"
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +28,9 @@
     "    \n",
     "    for col in data.columns:\n",
     "        data[col] = pd.to_numeric(data[col], errors='coerce')\n",
+    "        \n",
+    "    data = data.drop('num', axis=1)\n",
+    "    data = data.dropna()\n",
     "\n",
     "    X = data.drop('disease', axis=1)\n",
     "    y = data['disease']\n",
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,28 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision: 0.6875 Recall: 0.6111111111111112 F1: 0.6470588235294118\n",
-      "Precision: 0.6153846153846154 Recall: 0.5714285714285714 F1: 0.5925925925925926\n",
-      "Precision: 0.5333333333333333 Recall: 0.6153846153846154 F1: 0.5714285714285714\n",
-      "Precision: 0.5882352941176471 Recall: 0.7692307692307693 F1: 0.6666666666666666\n",
-      "Precision: 0.875 Recall: 0.4666666666666667 F1: 0.6086956521739131\n",
-      "Precision: 0.4444444444444444 Recall: 0.36363636363636365 F1: 0.4\n",
-      "Precision: 0.5 Recall: 0.5833333333333334 F1: 0.5384615384615384\n",
-      "Precision: 0.6153846153846154 Recall: 0.4444444444444444 F1: 0.5161290322580645\n",
-      "Precision: 0.8571428571428571 Recall: 0.5 F1: 0.631578947368421\n",
-      "Precision: 0.6153846153846154 Recall: 0.6153846153846154 F1: 0.6153846153846154\n",
+      "Precision: 0.5333333333333333 Recall: 0.7272727272727273 F1: 0.6153846153846154\n",
+      "Precision: 0.6666666666666666 Recall: 0.6153846153846154 F1: 0.64\n",
+      "Precision: 0.7857142857142857 Recall: 0.6470588235294118 F1: 0.7096774193548387\n",
+      "Precision: 0.8 Recall: 0.6666666666666666 F1: 0.7272727272727273\n",
+      "Precision: 0.6875 Recall: 0.55 F1: 0.6111111111111112\n",
+      "Precision: 0.625 Recall: 0.38461538461538464 F1: 0.47619047619047616\n",
+      "Precision: 0.47368421052631576 Recall: 0.75 F1: 0.5806451612903226\n",
+      "Precision: 0.6363636363636364 Recall: 0.5384615384615384 F1: 0.5833333333333334\n",
+      "Precision: 0.5 Recall: 0.5454545454545454 F1: 0.5217391304347826\n",
+      "Precision: 0.3076923076923077 Recall: 0.4444444444444444 F1: 0.36363636363636365\n",
       "\n",
       "Mean Results for kNN:\n",
-      "Precision: 0.633 (+/- 0.133)\n",
-      "Recall: 0.554 (+/- 0.108)\n",
-      "F1 Score: 0.579 (+/- 0.074)\n"
+      "Precision: 0.602 (+/- 0.143)\n",
+      "Recall: 0.587 (+/- 0.111)\n",
+      "F1 Score: 0.583 (+/- 0.103)\n"
      ]
     }
    ],
@@ -138,6 +142,44 @@
     "print(f\"Precision: {results['precision'][0]:.3f} (+/- {results['precision'][1]:.3f})\")\n",
     "print(f\"Recall: {results['recall'][0]:.3f} (+/- {results['recall'][1]:.3f})\")\n",
     "print(f\"F1 Score: {results['f1'][0]:.3f} (+/- {results['f1'][1]:.3f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12    0.279725\n",
+      "2     0.151193\n",
+      "11    0.108062\n",
+      "7     0.083773\n",
+      "4     0.079608\n",
+      "9     0.076073\n",
+      "0     0.072169\n",
+      "3     0.050094\n",
+      "10    0.031960\n",
+      "1     0.028341\n",
+      "6     0.016259\n",
+      "8     0.012420\n",
+      "5     0.010323\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "def feature_importance(X, y):\n",
+    "    dt = DecisionTreeClassifier(random_state=42)\n",
+    "    dt.fit(X, y)\n",
+    "    importances = dt.feature_importances_\n",
+    "    return pd.Series(importances).sort_values(ascending=False)\n",
+    "\n",
+    "importance_results = feature_importance(X, y)\n",
+    "\n",
+    "print(importance_results)"
    ]
   }
  ],
